Light Reset Button and Translation fixing in Links

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -274,7 +274,7 @@
                             <a class="active" href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
-                            <a lang="en" data-lang-token="menulighttesttoken" class="inactive" href="#" id="load_lighttest"><i class="fa fa-lightbulb-o fa-fw"></i> Light test</a>
+                            <a class="inactive" href="#" id="load_lighttest"><i class="fa fa-lightbulb-o fa-fw"></i><span lang="en" data-lang-token="menulighttesttoken"> Light test</span></a>
                         </li>
                     </ul>
                 </div>
