--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -274,6 +274,7 @@
                             <a class="active" href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
 						<li>
+						    <a class="inactive" href="#"><i class="fa fa-lightbulb-o fa-fw"></i><span lang="en" data-lang-token="menuremotecontroltoken"> Remote Control</span><span class="fa arrow"></span></a>
 						    <ul class="nav nav-second-level">
                                 <li>
 									<a class="inactive" href="#" id="load_lighttest"><i class="fa fa-lightbulb-o fa-fw"></i><span lang="en" data-lang-token="menulighttesttoken"> Light test</span></a>
