--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -51,7 +51,8 @@
 
     <!-- Custom CSS -->
     <link href="css/sb-admin-2.css" rel="stylesheet">
-
+	<link href="css/hyperion.css" rel="stylesheet">
+	
     <!-- Custom Fonts -->
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -77,7 +78,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Hyperion</a>
+                <a class="navbar-brand" href="index.html"><img src="img/hyperion/hyperionlogo.png" alt="Redefine ambient light!"></a>
             </div>
             <!-- /.navbar-header -->
 
