--- a/assets/webconfig/confKodi.html
+++ b/assets/webconfig/confKodi.html
@@ -3,7 +3,7 @@
         <div class="col-lg-12">
 			<h1 class="page-header"><i class="fa fa-play-circle-o fa-fw"></i>Kodi Watch</h1>
 			<div class="col-lg-12">
-				<div class="introd">	
+				<div class="introd">
 					<h4>The Kodi Watcher enables you to enable and disable the screencapture depending on Kodi state. This is not limited to the same machine, you could observe also a Kodi on any other device at your network.</h4>
 				</div>
 				<div class="alert alert-info" role="alert">
@@ -11,14 +11,14 @@
 					<strong>HINT 2:</strong> If you just use a USB-Grabber you could enable the Kodi Watch for this separately at the USB-Grabber page.
 				</div>
 			</div>
-			
+
 			<div class="col-lg-7">
 			<div class="panel panel-default">
 				<div class="panel-body">
 		<!--Form example start-->
 				    <form class="form-horizontal">
         <div class="form-group">
-            <label class="control-label col-xs-10" for="SetEnableKodiCheck">Aktiviere die Überwachung für Kodi:</label>
+            <label class="control-label col-xs-10" for="SetEnableKodiCheck">Aktiviere die Ãœberwachung fÃ¼r Kodi:</label>
          	<div class="col-xs-2">
   				<div class="checkbox checkbox-success">
    					<input type="checkbox" id="SetEnableKodiCheck">
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-xs-6" for="SetKodiMenu">LEDs an im Menü:</label>
+            <label class="control-label col-xs-6" for="SetKodiMenu">LEDs an im MenÃ¼:</label>
             <div class="col-xs-6">
              	<div class="checkbox checkbox-primary">
    					<label>
@@ -105,7 +105,7 @@
             </div>
         </div>
 		<!--form example end -->
-		
+
 				</div>
 			</div>
 			</div>
