--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -387,7 +387,7 @@
 			});
 
 			$("#load_confKodi").on("click", function() {
-				$("#page-wrapper").load("confkodi.html");
+				$("#page-wrapper").load("kodiconf.html");
 			});
     });
 		$(function(){
