--- a/assets/webconfig/huebridge.html
+++ b/assets/webconfig/huebridge.html
@@ -4,7 +4,7 @@
             <h1 class="page-header">Hue Bridge</h1>
 			<div class="col-lg-12" >
 				<div class="col-lg-6" >
-					<span id="ip_alert" style="display:none; color:red; font-weight: bold;">Please check your IP Adress.</span>
+					<span id="ip_alert" style="display:none; color:red; font-weight: bold;">Please check your IP Address.</span>
 					<div class="form-group">
 					  <label for="ip">IP:</label>
 					  <input type="text" class="form-control" id="ip">
@@ -12,14 +12,14 @@
 					  <input type="text" class="form-control" id="user" disabled>
 					  <br />
 					  <button type="button" class="btn btn-success" id="create_user_first"> Create User
-					</div>	
-				</div>	
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 	<hr />
 	<div id="hue_lights" class="row">
-		
+
 	</div>
 </div>
 
@@ -29,7 +29,7 @@
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
 		Press link button on the Hue Bridge now and confirm with the "Pair" button. <br /><br />
-		
+
 		<span id="link_not_pressed" style="display:none; color: red">Please press link button on your Hue Bridge</span>
 		<center>
 			<button type="button" class="btn btn-success" id="create_user_second"> Pair
@@ -41,12 +41,12 @@
 <script>
 
 	$(document).ready( function() {
-	
+
 		if($("#ip").val() != '' && $("#user").val() != '') {
 			get_hue_lights();
 		}
-	
-		
+
+
 		$("#create_user_first").on("click", function() {
 			var data = {"devicetype":"hyperion#"+Date.now()};
 			$.ajax({
@@ -56,7 +56,7 @@
 				timeout: 1000,
 				contentType: 'application/json',
 				data: JSON.stringify(data),
-				success: function(r) { 
+				success: function(r) {
 					$("#ip_alert").hide();
 					if (typeof r[0].error != 'undefined') {
 						if (r[0].error.description == "link button not pressed"){
@@ -67,10 +67,10 @@
 				error: function(XMLHttpRequest, textStatus, errorThrown) {
 					$("#ip_alert").show();
 				 }
-			});		
+			});
 		});
-		
-		
+
+
 		$("#create_user_second").on("click", function() {
 			var data = {"devicetype":"my_hue_app#iphone pet2er"};
 			$.ajax({
@@ -79,7 +79,7 @@
 				processData: false,
 				contentType: 'application/json',
 				data: JSON.stringify(data),
-				success: function(r) { 
+				success: function(r) {
 					if (typeof r[0].error != 'undefined') {
 						$("#link_not_pressed").show();
 					}
@@ -90,24 +90,24 @@
 						get_hue_lights();
 					}
 				}
-			});		
+			});
 		});
-		
-		
+
+
 		function get_hue_lights(){
 			$.ajax({
 				type: "GET",
 				url: 'http://'+$("#ip").val()+'/api/'+$("#user").val()+'/lights',
 				processData: false,
 				contentType: 'application/json',
-				success: function(r) { 
+				success: function(r) {
 					for(var lightid in r){
 						console.log(r[lightid].name);
 						$('#hue_lights').append('ID: '+lightid+' Name: '+r[lightid].name+'<br />');
 					}
 				}
 			});
-		}	
+		}
 	});
-	
+
 </script>
