--- a/assets/webconfig/huebridge.html
+++ b/assets/webconfig/huebridge.html
@@ -4,14 +4,14 @@
             <h1 class="page-header">Hue Bridge</h1>
 			<div class="col-lg-12" >
 				<div class="col-lg-6" >
-					<span id="ip_alert" style="display:none; color:red; font-weight: bold;">Please check your IP Address.</span>
+					<span id="ip_alert" style="display:none; color:red; font-weight: bold;" lang="en" data-lang-token="hue_failure_ip_token">Please check your IP Address.</span>
 					<div class="form-group">
 					  <label for="ip">IP:</label>
 					  <input type="text" class="form-control" id="ip">
-					  <label for="user">Username:</label>
+					  <label for="user" lang="en">Username:</label>
 					  <input type="text" class="form-control" id="user" disabled>
 					  <br />
-					  <button type="button" class="btn btn-success" id="create_user_first"> Create User
+					  <button type="button" class="btn btn-success" id="create_user_first"> <i class="fa fa-floppy-o"></i><span lang="en" data-lang-token="hue_button_create_user_token"> Create User</span></button>
 					</div>
 				</div>
 			</div>
@@ -28,11 +28,11 @@
 <div class="modal fade bs-pair-modal-lg" id="pairmodal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
-		Press link button on the Hue Bridge now and confirm with the "Pair" button. <br /><br />
+		<span lang="en" data-lang-token="hue_press_link_modal">Press link button on the Hue Bridge now and confirm with the "Pair" button.</span> <br /><br />
 
-		<span id="link_not_pressed" style="display:none; color: red">Please press link button on your Hue Bridge</span>
+		<span id="link_not_pressed" style="display:none; color: red" lang="en" data-lang-token="hue_press_link_modal_failure">Please press link button on your Hue Bridge.</span>
 		<center>
-			<button type="button" class="btn btn-success" id="create_user_second"> Pair
+			<button type="button" class="btn btn-success" id="create_user_second"> <i class="fa fa-floppy-o"></i><span lang="en" data-lang-token="hue_button_pair"> Pair</span>
 		</center>
     </div>
   </div>
@@ -102,7 +102,7 @@
 				contentType: 'application/json',
 				success: function(r) {
 					for(var lightid in r){
-						console.log(r[lightid].name);
+						//console.log(r[lightid].name);
 						$('#hue_lights').append('ID: '+lightid+' Name: '+r[lightid].name+'<br />');
 					}
 				}
