--- a/assets/webconfig/lighttest.html
+++ b/assets/webconfig/lighttest.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header" lang="en">Light test</h1>
+            <h1 class="page-header" lang="en" data-lang-token="menulighttesttoken">Light test</h1>
 			<div class="col-lg-1">
 				<span lang="en" data-lang-token="lighttesttoken">Color: </span>
 			</div>
@@ -24,13 +24,13 @@
 
 
 <script>
-	
+
 	var webSocket = new WebSocket('ws://'+document.location.hostname+':19444');
-	
+
 	webSocket.onerror = function(event) {
 		alert(event.data);
 	};
-	
+
 	webSocket.onopen = function(event) {
 		$(function() {
 			$('#cp2').colorpicker({
@@ -57,20 +57,20 @@
 					},
 				}
 			});
-		
+
 			$('#cp2').colorpicker().on('changeColor', function(e) {
 				//console.log(e.color.toRGB());
 				webSocket.send('{"command":"color", "color":['+e.color.toRGB().r+','+e.color.toRGB().g+','+e.color.toRGB().b+'], "priority":1}');
 			});
 		});
-		
-		
+
+
 		$("#reset_color").on("click", function() {
 			webSocket.send('{"command":"clear", "priority":1}');
 		});
-	
+
 	};
-	
+
 	webSocket.onmessage = function(event){
 	console.log(event.data);
 	}
