--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
 
 
-    <title>Hyperion</title>
+    <title>Hyperion - WebUI</title>
 
 
 	<!-- jQuery -->
