--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -281,21 +281,21 @@
                             <a class="inactive" href="#"><i class="fa fa-cog fa-fw"></i>Configuration<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-									                  <a class="inactive" href="#" id="load_confKodi"><i class="fa fa-play-circle-o fa-fw"></i>Kodi Watch</a>
+									                  <a class="inactive" href="#" id="load_kodiconf"><i class="fa fa-play-circle-o fa-fw"></i>Kodi Watch</a>
 								                </li>
                                 <li>
-                                    <a class="inactive" href="#" id="load_huebridge"><i class="fa fa-cog fa-fw"></i> Hue Bridge</a>
+                                    <a class="inactive" href="#" id="load_huebridge"><i class="fa fa-cog fa-fw"></i>Hue Bridge</a>
                                 </li>
 							              </ul>
 						            </li>
 						            <li>
-						                <a class="inactive" href="#"><i class="fa fa-lightbulb-o fa-fw"></i><span lang="en" data-lang-token="menuremotecontroltoken">Remote Control</span><span class="fa arrow"></span></a>
+						                <a class="inactive" href="#"><i class="fa fa-lightbulb-o fa-fw"></i><span lang="en" data-lang-token="menu_remote_control_token">Remote Control</span><span class="fa arrow"></span></a>
 						                <ul class="nav nav-second-level">
                                 <li>
-									                  <a class="inactive" href="#" id="load_lighttest"><i class="fa fa-lightbulb-o fa-fw"></i><span lang="en" data-lang-token="menulighttesttoken">Light test</span></a>
+									                  <a class="inactive" href="#" id="load_lighttest"><i class="fa fa-lightbulb-o fa-fw"></i><span lang="en" data-lang-token="menu_light_test_token">Light test</span></a>
 								                </li>
                                 <li>
-                									  <a class="inactive" href="#" id="load_effects"><i class="fa fa-certificate fa-fw"></i><span lang="en" data-lang-token="menueffectstoken">Effects</span></a>
+                									  <a class="inactive" href="#" id="load_effects"><i class="fa fa-certificate fa-fw"></i><span lang="en" data-lang-token="menu_effects_token">Effects</span></a>
                 								</li>
 							              </ul>
                         </li>
@@ -386,7 +386,7 @@
 				$("#page-wrapper").load("support.html");
 			});
 
-			$("#load_confKodi").on("click", function() {
+			$("#load_kodiconf").on("click", function() {
 				$("#page-wrapper").load("kodiconf.html");
 			});
     });
