--- a/assets/webconfig/effects.html
+++ b/assets/webconfig/effects.html
@@ -1,9 +1,13 @@
-<div class="container-fluid">
+﻿<div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header" lang="en" data-lang-token="menueffectstoken">Effects</h1>
+            <h1 class="page-header" lang="en" data-lang-token="main_menu_effects_token">Effects</h1>
+			<div class="introd">
+				<h4 lang="en" data-lang-token="remote_effects_intro">The Effects remote enables you to set an effect for testing or demonstration purposes. Don't forget to stop it afterwards.</h4>
+			</div>
+			<hr>
 			<div class="col-lg-12" id="buttondiv">
-				<button type="button" class="btn btn-danger" id="effect_stop"><i class="fa fa-stop"></i></button><span lang="en" data-lang-token="buttoneffectstoptoken"> Stop Effect</span><br />
+				<button type="button" class="btn btn-danger" id="effect_stop"><i class="fa fa-stop"></i></button><span lang="en" data-lang-token="remote_effects_label_stopeffect">Stop Effect</span><br />
 			</div>
 		</div>
 	</div>
