--- a/assets/webconfig/huebridge.html
+++ b/assets/webconfig/huebridge.html
@@ -1,14 +1,14 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Hue Bridge</h1>
+            <h1 class="page-header" lang="en" data-lang-token="main_menu_huebridge_token">Hue Bridge</h1>
 			<div class="col-lg-12" >
 				<div class="col-lg-6" >
 					<span id="ip_alert" style="display:none; color:red; font-weight: bold;" lang="en" data-lang-token="hue_failure_ip_token">Please check your IP Address.</span>
 					<div class="form-group">
 					  <label for="ip">IP:</label>
 					  <input type="text" class="form-control" id="ip">
-					  <label for="user" lang="en">Username:</label>
+					  <label for="user" lang="en" data-lang-token="hue_label_username">Username:</label>
 					  <input type="text" class="form-control" id="user" disabled>
 					  <br />
 					  <button type="button" class="btn btn-success" id="create_user_first"> <i class="fa fa-floppy-o"></i><span lang="en" data-lang-token="hue_button_create_user_token"> Create User</span></button>
