--- a/assets/webconfig/lighttest.html
+++ b/assets/webconfig/lighttest.html
@@ -4,9 +4,9 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header" lang="en" data-lang-token="menulighttesttoken">Light test</h1>
+            <h1 class="page-header" lang="en" data-lang-token="main_menu_colors_token">Colors</h1>
 			<div class="col-lg-1">
-				<span lang="en" data-lang-token="lighttesttoken">Color: </span>
+				<span lang="en" data-lang-token="remote_colors_label_color">Set color: </span>
 			</div>
 			<div class="col-lg-3">
 				<div id="cp2" class="input-group colorpicker-component">
@@ -15,7 +15,7 @@
 				</div>
 			</div>
 			<div class="col-lg-8">
-				<button lang="en" data-lang-token="buttoncolorresettoken" type="button" class="btn btn-warning" id="reset_color">Reset Color</button>
+				<button lang="en" data-lang-token="remote_colors_button_reset" type="button" class="btn btn-warning" id="reset_color">Reset Color</button>
 			</div>
 		</div>
     </div>
