--- a/assets/webconfig/kodiconf.html
+++ b/assets/webconfig/kodiconf.html
@@ -112,12 +112,10 @@
 			</div>
 			<div class="col-lg-12">
 				<div class="panel panel-info">
-					<div class="panel-heading" >
-					<a href="#kodiWatchInfo" class="panel-heading" data-toggle="collapse">
+					<div class="panel-heading" data-toggle="collapse" data-target="#dkodiWatchInfo">
 						Kodi options explained
-					</a>
 					</div>
-					<div id="kodiWatchInfo" class="panel-body">
+					<div id="kodiWatchInfo" class="collapse panel-body">
 						<ul>
 							<li><strong>Enabled:</strong> If checked, the Kodi Checker is enabled</li>
 							<li><strong>Kodi IP-Address:</strong> The ip address of your kodi "127.0.01" means your kodi on the same machine (see hint below)</li>
