--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -14,6 +14,7 @@
 
 	<!-- jQuery -->
     <script src="js/jquery.min.js"></script>
+    <script src="js/hyperion.js"></script>
 
   <!-- JSONForm -->
     <script src="js/underscore.js"></script>
