Added Bootstrap Switches for all checkboxes
All checkboxes will be converted to Switches

--- a/assets/webconfig/generalconf.html
+++ b/assets/webconfig/generalconf.html
@@ -63,6 +63,8 @@
 
       enableFormTranslation("generalConfForm", "generalConfForm");
 
+      $("[type='checkbox']").bootstrapSwitch();
+
 
 		}
 
