Translationsupport for JSON Forms & Bootstrap Switches (#188)
* Example JSON Form Example with General setting

I have created a new Category "General" with several Settings for
Hyperion.
For now the Submit Button only console.log's the values.

Known Bug: For some reason it seems to do not load the bootstrap
correctly or maybe the Lib isn't compatible with the newest version of
bootstrap.

* Translationsupport for JSON Forms

* Hotfix

* Added Bootstrap Switches for all checkboxes

All checkboxes will be converted to Switches

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -11,9 +11,13 @@
 
     <title>Hyperion - WebUI</title>
 
-
-	<!-- jQuery -->
+  <!-- jQuery -->
     <script src="js/jquery.min.js"></script>
+    <script src="js/hyperion.js"></script>
+
+  <!-- Bootstrap Switch -->
+    <script src="js/bootstrap-switch.min.js"></script>
+    <link href="css/bootstrap-switch.min.css" rel="stylesheet">
 
   <!-- JSONForm -->
     <script src="js/underscore.js"></script>
@@ -436,6 +440,10 @@
       $("#load_confGeneral").on("click", function() {
 				$("#page-wrapper").load("generalconf.html");
 			});
+
+      //Change all Checkboxes to Switches
+      $("[type='checkbox']").bootstrapSwitch();
+
     });
 		$(function(){
 			var sidebar = $('#side-menu');  // cache sidebar to a variable for performance
