--- a/assets/webconfig/generalconf.html
+++ b/assets/webconfig/generalconf.html
@@ -7,16 +7,13 @@
 			</div>
 			<hr>
 			<div class="col-lg-12">
-        <form></form>
+        <form id="generalConfForm"></form>
       </div>
 		</div>
 	</div>
 </div>
 
 
-<script type="text/javascript">
-
-    </script>
 <script>
 
 	$(document).ready( function() {
@@ -64,12 +61,16 @@
 
 
 
+      enableFormTranslation("generalConfForm", "generalConfForm");
 
+      $("[type='checkbox']").bootstrapSwitch();
 
 
 		}
 
-	});
+  });
+
+
 
 
 </script>
