Web: Add update.html (#187)
* Update packages.cmake

* version.json

* Update version.json

* update webui

* add better icon spacing solution, remove changes from font awesome to keep it update secure

* fix conflict no ci

* resolve conflict no ci

* no ci

--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -313,6 +313,15 @@
 						            <li>
                             <a class="inactive" href="#" id="load_support"><i class="fa fa-info fa-fw"></i><span lang="en" data-lang-token="main_menu_support_token">Support</span></a>
                         </li>
+						<li>
+						    <a class="inactive" href="#"><i class="fa fa-cog fa-fw"></i><span lang="en" data-lang-token="main_menu_system_token">System</span><span class="fa arrow"></span></a>
+							<ul class="nav nav-second-level">
+                                <li>
+									<a class="inactive" href="#" id="load_update"><i class="fa fa-download fa-fw"></i><span lang="en" data-lang-token="main_menu_update_token">Update</span></a>
+								</li>
+							</ul>
+                        </li>
+                        </li>
 
                     </ul>
                 </div>
@@ -436,7 +445,11 @@
 			$("#load_confKodi").on("click", function() {
 				$("#page-wrapper").load("kodiconf.html");
 			});
-
+			
+      $("#load_update").on("click", function() {
+				$("#page-wrapper").load("update.html");
+			});
+			
       $("#load_confGeneral").on("click", function() {
 				$("#page-wrapper").load("generalconf.html");
 			});
