--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -360,9 +360,11 @@
 											<tbody>
 												<tr>
 													<td lang="en" data-lang-token="dashboard_label_infobox_currenthyp">Your Hyperion version:</td>
+													<td id="currentversion">unknown</td>
 												</tr>
 												<tr>
 													<td lang="en" data-lang-token="dashboard_label_infobox_latesthyp">Latest version:</td>
+													<td id="latestversion">unknown</td>
 												</tr>
 												<tr>
 													<td lang="en" data-lang-token="dashboard_label_infobox_leddevice">LED type:</td>
