--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -469,7 +469,7 @@
     <div class="modal-content" id="con_error_modal">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Oh noes! Something wen't wrong!</h4>
+        <h4 class="modal-title">Oh noes! Something went wrong!</h4>
       </div>
       <div class="modal-body">
         <p>We are sorry, the json port was not found. Just try another one!</p>
