--- a/assets/webconfig/generalconf.html
+++ b/assets/webconfig/generalconf.html
@@ -7,7 +7,9 @@
 			</div>
 			<hr>
 			<div class="col-lg-12">
-        <form id="generalConfForm"></form>
+        <!--<form id="generalConfForm"></form>-->
+        <div id='editor_holder'></div>
+        <button id='submit'>Submit (console.log)</button>
       </div>
 		</div>
 	</div>
@@ -38,8 +40,35 @@
       udpListener = JSON.parse(response.data).result.properties.udpListener;
       webConfig = JSON.parse(response.data).result.properties.webConfig;
 
+      var element = document.getElementById('editor_holder');
+      //JSONEditor.defaults.options.theme = 'bootstrap3';
+      var editor = new JSONEditor(element,{
+        theme: 'bootstrap3',
+        disable_collapse: 'true',
+        form_name_root: 'sa',
+        disable_edit_json: 'true',
+        disable_properties: 'true',
+        no_additional_properties: 'true',
+        schema: {
+          title:' ',
+          properties: {
+            logger,
+            jsonServer,
+            protoServer,
+            boblightServer,
+            udpListener,
+            webConfig
+          }
+        }
+      });
 
-      $('form').jsonForm({
+      document.getElementById('submit').addEventListener('click',function() {
+        // Get the value from the editor
+        console.log(editor.getValue());
+      });
+
+
+      /*$('form').jsonForm({
         schema: {
           logger,
           jsonServer,
@@ -57,7 +86,7 @@
             console.log(values);
           }
         }
-      });
+      });*/
 
 
 
