--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -28,6 +28,9 @@
     <script src="js/lib/underscore.js"></script>
     <script src="js/lib/jsonform.js"></script>
 
+
+    <script src="js/lib/jsoneditor.min.js"></script>
+
 	<!--Language Support -->
 	<script src="js/lib/jquery-lang.js" charset="utf-8" type="text/javascript"></script>
 	<script src="js/lib/js.cookie.js"></script>
@@ -451,7 +454,7 @@
 			$("#load_effects").on("click", function() {
 				$("#page-wrapper").load("effects.html");
 			});
-			
+
 			$("#load_components").on("click", function() {
 				$("#page-wrapper").load("remote_components.html");
 			});
@@ -484,7 +487,7 @@
 		var cleanCurrentVersion;
 		var latestVersion;
 		var cleanLatestVersion;
-		
+
 		webSocket = new WebSocket('ws://'+document.location.hostname+':19444');
 		var serverInfo;
 
@@ -501,12 +504,12 @@
 			responseJSON = JSON.parse(response.data );
 			currentVersion = responseJSON.info.hyperion[0].version;
 			cleanCurrentVersion = currentVersion.replace(/\./g, '');
-		
+
 			$.get( "https://raw.githubusercontent.com/hyperion-project/hyperion.ng/master/version.json", function( data ) {
 				var responseJSON = JSON.parse(data);
 				latestVersion = responseJSON[0].versionnr;
 				cleanLatestVersion = latestVersion.replace(/\./g, '');
-				
+
 				$('#currentversion').append(' V'+currentVersion);
 				$('#latestversion').append(' V'+latestVersion);
 
@@ -517,9 +520,9 @@
 					$('#versioninforesult').append('<div  lang="en" data-lang-token="dashboard_message_infobox_updatesuccess" style="margin:0px;" class="alert alert-success">You run the latest version of Hyperion.</div>');
 					}
 			});
-		
+
 		};
-	  
+
     });
 		$(function(){
 			var sidebar = $('#side-menu');  // cache sidebar to a variable for performance
