New JSON Editor

--- a/assets/webconfig/generalconf.html
+++ b/assets/webconfig/generalconf.html
@@ -90,7 +90,7 @@
 
 
 
-      enableFormTranslation("generalConfForm", "generalConfForm");
+      enableFormTranslation("generalConfForm", "editor_holder");
 
       $("[type='checkbox']").bootstrapSwitch();
 
