--- a/assets/webconfig/generalconf.html
+++ b/assets/webconfig/generalconf.html
@@ -7,8 +7,9 @@
 			</div>
 			<hr>
 			<div class="col-lg-12">
-        <!--<form id="generalConfForm"></form>-->
+        <form id="generalConfForm"></form>
         <div id='editor_holder'></div>
+
         <button id='submit'>Submit (console.log)</button>
       </div>
 		</div>
